--- a/layouts/top/single.html
+++ b/layouts/top/single.html
@@ -15,8 +15,8 @@
                 {{ partial "multilingual-sel.html" . }}
 
                 <!-- Chinese Version -->
-                <div class="zh post-container">
-                    {{$file :=  "/top/about-zh.md"}}
+                <div class="ja post-container">
+                    {{$file :=  "/top/about-ja.md"}}
                     {{ $file | readFile | markdownify}}
                 </div>
             
