--- a/static/css/hugo-theme-cleanwhite.css
+++ b/static/css/hugo-theme-cleanwhite.css
@@ -60,7 +60,7 @@
     margin-right:-15px
 }
 body{
-    font-family:-apple-system,"Helvetica Neue",Arial,"PingFang SC","Hiragino Sans GB",STHeiti,"Microsoft YaHei","Microsoft JhengHei","Source Han Sans SC","Noto Sans CJK SC","Source Han Sans CN","Noto Sans SC","Source Han Sans TC","Noto Sans CJK TC","WenQuanYi Micro Hei",SimSun,sans-serif;
+    font-family:-apple-system,"Helvetica Neue",Arial,sans-serif;
     line-height:1.7;
     font-size:17px;
     color:#404040;
@@ -70,7 +70,7 @@ p{
     margin:30px 0
 }
 h1,h2,h3,h4,h5,h6{
-    font-family:-apple-system,"Helvetica Neue",Arial,"PingFang SC","Hiragino Sans GB",STHeiti,"Microsoft YaHei","Microsoft JhengHei","Source Han Sans SC","Noto Sans CJK SC","Source Han Sans CN","Noto Sans SC","Source Han Sans TC","Noto Sans CJK TC","WenQuanYi Micro Hei",SimSun,sans-serif;
+    font-family:-apple-system,"Helvetica Neue",Arial,sans-serif;
     line-height:1.7;
     line-height:1.1;
     font-weight:700
@@ -247,7 +247,7 @@ pre code{
     left:0;
     width:100%;
     z-index:3;
-    font-family:-apple-system,"Helvetica Neue",Arial,"PingFang SC","Hiragino Sans GB",STHeiti,"Microsoft YaHei","Microsoft JhengHei","Source Han Sans SC","Noto Sans CJK SC","Source Han Sans CN","Noto Sans SC","Source Han Sans TC","Noto Sans CJK TC","WenQuanYi Micro Hei",SimSun,sans-serif;
+    font-family:-apple-system,"Helvetica Neue",Arial,sans-serif;
     line-height:1.7
 }
 .navbar-custom .navbar-brand{
@@ -413,7 +413,7 @@ pre code{
     font-size:50px
 }
 .intro-header .site-heading .subheading,.intro-header .page-heading .subheading{
-    font-family:-apple-system,"Helvetica Neue",Arial,"PingFang SC","Hiragino Sans GB",STHeiti,"Microsoft YaHei","Microsoft JhengHei","Source Han Sans SC","Noto Sans CJK SC","Source Han Sans CN","Noto Sans SC","Source Han Sans TC","Noto Sans CJK TC","WenQuanYi Micro Hei",SimSun,sans-serif;
+    font-family:-apple-system,"Helvetica Neue",Arial,sans-serif;
     line-height:1.7;
     font-size:18px;
     line-height:1.1;
@@ -439,7 +439,7 @@ pre code{
 }
 
 .intro-header .post-heading .subheading{
-    font-family:-apple-system,"Helvetica Neue",Arial,"PingFang SC","Hiragino Sans GB",STHeiti,"Microsoft YaHei","Microsoft JhengHei","Source Han Sans SC","Noto Sans CJK SC","Source Han Sans CN","Noto Sans SC","Source Han Sans TC","Noto Sans CJK TC","WenQuanYi Micro Hei",SimSun,sans-serif;
+    font-family:-apple-system,"Helvetica Neue",Arial,sans-serif;
     line-height:1.7;
     font-size:17px;
     line-height:1.4;
@@ -609,7 +609,7 @@ form .row:first-child .floating-label-form-group{
     border-top:1px solid #eee
 }
 .btn{
-    font-family:-apple-system,"Helvetica Neue",Arial,"PingFang SC","Hiragino Sans GB",STHeiti,"Microsoft YaHei","Microsoft JhengHei","Source Han Sans SC","Noto Sans CJK SC","Source Han Sans CN","Noto Sans SC","Source Han Sans TC","Noto Sans CJK TC","WenQuanYi Micro Hei",SimSun,sans-serif;
+    font-family:-apple-system,"Helvetica Neue",Arial,sans-serif;
     line-height:1.7;
     text-transform:uppercase;
     font-size:14px;
@@ -633,7 +633,7 @@ form .row:first-child .floating-label-form-group{
     padding:0 0 20px 0
 }
 .pager li>a,.pager li>span{
-    font-family:-apple-system,"Helvetica Neue",Arial,"PingFang SC","Hiragino Sans GB",STHeiti,"Microsoft YaHei","Microsoft JhengHei","Source Han Sans SC","Noto Sans CJK SC","Source Han Sans CN","Noto Sans SC","Source Han Sans TC","Noto Sans CJK TC","WenQuanYi Micro Hei",SimSun,sans-serif;
+    font-family:-apple-system,"Helvetica Neue",Arial,sans-serif;
     line-height:1.7;
     text-transform:uppercase;
     font-size:13px;
@@ -762,7 +762,7 @@ body{
 }
 .one-tag-list .tag-text{
     font-weight:200;
-    font-family:-apple-system,"Helvetica Neue",Arial,"PingFang SC","Hiragino Sans GB",STHeiti,"Microsoft YaHei","Microsoft JhengHei","Source Han Sans SC","Noto Sans CJK SC","Source Han Sans CN","Noto Sans SC","Source Han Sans TC","Noto Sans CJK TC","WenQuanYi Micro Hei",SimSun,sans-serif;
+    font-family:-apple-system,"Helvetica Neue",Arial,sans-serif;
     line-height:1.7
 }
 .one-tag-list .post-preview{
