--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -90,6 +90,10 @@
     <script src="{{ . | absURL }}"></script>
     {{ end }}
 
+    <!-- Google Adsense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3010551868938642"
+     crossorigin="anonymous"></script>
+
 {{ if .Site.GoogleAnalytics }}
 {{ template "_internal/google_analytics.html" . }}
 {{ end }}
